syntax = "proto3";

option go_package = "./;virtualNode_rpc";
package node;

service Node {
  rpc deploy(InstanceDeploy) returns (InstanceDeployReply) {}
}
message NodeInstanceInfo{
  int64 requestId = 1;
  string funcName = 2;
  string dispatcherAddr = 3;
}
message InstanceDeploy{
  repeated NodeInstanceInfo list = 1;
}
message InstanceDeployReply{
  int64 state = 1;
}